--- a/Personal.html
+++ b/Personal.html
@@ -32,7 +32,7 @@
     <div class="project">
     	<h1>This Website!</h1>
         <p>This website itself was my first HTML + CSS project. I decided to create it using only HTML or CSS code. I have not used any website creation tools, plugins, or pre-written code in its development. Unfortunately I am not an expert on website creation. You may experience some visual errors on small resolution screens (smaller monitors, phones) or when viewing in a small window and for that I apologize!</p>
-        <a href="http://alexdhenry.com"><img src="http://i.imgur.com/XzyLX1N.jpg" /></a>
+        <a href="https://github.com/adhe223/Website"><img src="http://i.imgur.com/XzyLX1N.jpg" /></a>
     </div>
 </div>
 
