--- a/Personal.html
+++ b/Personal.html
@@ -8,7 +8,8 @@
 
 <body background="http://i.imgur.com/67xTl46.jpg">
 
-<div id="header">Alex D. Henry</div>
+<h1 id="header">Alex D. Henry</h1>
+<p id="disclaimer">Images link to source code</p>
 
 <div id="linkedin">
 	<a href="http://www.linkedin.com/pub/alex-henry/21/a5b/42a">
@@ -17,16 +18,16 @@
 </div>
 
 <div class="center">
-	<div class="project">
+	<div class="project">        
 		<h1>Faolin: Text Based RPG</h1>
     	<p>Faolin is a text based RPG that I put together in C++ as a learning exercise. I was hoping to gain a greater understanding of game principles and structure. The game features an algorithm to randomly generate the world (mountains, rivers, plains), a working map available to the player, a leveling system, the ability to save and load games, as well as other general RPG elements. </p>
-        <a href="https://github.com/"><img src="http://i.imgur.com/TTK6Mhn.jpg" height="80" width="80"/></a>
+        <a href="https://github.com/adhe223/Faolin"><img src="http://i.imgur.com/l5frP8U.jpg" height="80" width="80"/></a>
     </div>
     
     <div class="project">
     	<h1>Minesweeper</h1>
         <p>This is a text based minesweeper game. The game is completely functional and features a working high score list. Written in C++ using VS10.</p>
-        <a href="https://github.com/"><img src="http://i.imgur.com/39Wzpcx.jpg" height="80" width="80"/></a>
+        <a href="https://github.com/adhe223/Minesweeper"><img src="http://i.imgur.com/39Wzpcx.jpg" height="80" width="80"/></a>
     </div>
     
     <div class="project">
