--- a/Personal.html
+++ b/Personal.html
@@ -19,6 +19,12 @@
 
 <div class="center">
 	<div class="project">        
+		<h1>WikiLocale: Android App</h1>
+    	<p>WikiLocale is my first foray into mobile development. The goal of the prjoject was to make an app that is useful for me and in the process build valuable mobile development skills as well as accrue more experience in Java. The app detects when the user is traveling away from home and sends them a notification that links to the Wikipedia of the city they are currently in.</p>
+        <a href="https://github.com/adhe223/WikiLocale"><img src="http://i.imgur.com/BtIXh0x.png" height="80" width="80"/></a>
+    </div>
+
+	<div class="project">        
 		<h1>Faolin: Text Based RPG</h1>
     	<p>Faolin is a text based RPG that I put together in C++ as a learning exercise. I was hoping to gain a greater understanding of game principles and structure. The game features an algorithm to randomly generate the world (mountains, rivers, plains), a working map available to the player, a leveling system, the ability to save and load games, as well as other general RPG elements. </p>
         <a href="https://github.com/adhe223/Faolin"><img src="http://i.imgur.com/l5frP8U.jpg" height="80" width="80"/></a>
