Updated for mobile
Fixed some of the positioning to make the site accessible from mobile
devices

--- a/default.html
+++ b/default.html
@@ -2,11 +2,11 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<link type="text/css" rel="stylesheet" href="personal.css"/>
+<link type="text/css" rel="stylesheet" href="style.css"/>
 <title>Alex D. Henry</title>
 </head>
 
-<body background="http://i.imgur.com/67xTl46.jpg">
+<body>
 
 <h1 id="header">Alex D. Henry</h1>
 <p id="disclaimer">Images link to source code</p>
