--- a/index.html
+++ b/index.html
@@ -20,25 +20,25 @@
 <div class="center">
 	<div class="project">        
 		<h1>WikiLocale: Android App</h1>
-    	<p>WikiLocale is my first foray into mobile development. The goal of the prjoject was to make an app that is useful for me and in the process build valuable mobile development skills as well as accrue more experience in Java. The app detects when the user is traveling away from home and sends them a notification that links to the Wikipedia of the city they are currently in.</p>
+    	<p>WikiLocale is my first foray into mobile development. The goal of the project was to make an app that is useful for me and in the process build valuable, mobile development skills as well as accrue more experience in Java. The app detects when the user is traveling away from home and sends them a notification that links to the Wikipedia page of the city they are currently in. It tests for various situations where it won't fire a notification based on the user's home location (user defineable) or distance traveled since last update. Written in Java using Eclipse and Google's Android SDK.</p>
         <a href="https://github.com/adhe223/WikiLocale"><img src="http://i.imgur.com/BtIXh0x.png" height="80" width="80"/></a>
     </div>
 
 	<div class="project">        
 		<h1>Faolin: Text Based RPG</h1>
-    	<p>Faolin is a text based RPG that I put together in C++ as a learning exercise. I was hoping to gain a greater understanding of game principles and structure. The game features an algorithm to randomly generate the world (mountains, rivers, plains), a working map available to the player, a leveling system, the ability to save and load games, as well as other general RPG elements. </p>
+    	<p>Faolin is a text based RPG that I put together in C++ as a learning exercise. I was hoping to gain a greater understanding of game principles and structure. The game features an algorithm to randomly generate the world (mountains, rivers, plains), a working map available to the player, an inventory system, leveling attributes, the ability to save and load games, as well as other essential RPG elements. The project was written in C++ using VS10. </p>
         <a href="https://github.com/adhe223/Faolin"><img src="http://i.imgur.com/l5frP8U.jpg" height="80" width="80"/></a>
     </div>
     
     <div class="project">
     	<h1>Minesweeper</h1>
-        <p>This is a text based minesweeper game. The game is completely functional and features a working high score list. Written in C++ using VS10.</p>
+        <p>This is a text based minesweeper game. The game is completely functional and features a working high score list. This was originally a coding assignment through school. We had four such projects that semester, this was the largest of the four and definitely the one I enjoyed the most. Features include a text based display, the functioning high scores list, customizable grids, random mine placement, as well as a recursive algorithm to check for the presence of mines. Project is written in C++ using VS10.</p>
         <a href="https://github.com/adhe223/Minesweeper"><img src="http://i.imgur.com/39Wzpcx.jpg" height="80" width="80"/></a>
     </div>
     
     <div class="project">
     	<h1>This Website!</h1>
-        <p>This website itself was my first HTML + CSS project. I decided to create it using only HTML or CSS code. I have not used any website creation tools, plugins, or pre-written code in its development. Unfortunately I am not an expert on website creation. You may experience some visual errors on small resolution screens (smaller monitors, phones) or when viewing in a small window and for that I apologize!</p>
+        <p>This website itself was my first HTML + CSS project. I decided to create it using only HTML or CSS code. I have not used any website creation tools, plugins, or pre-written code in its development. Unfortunately, I am not an expert on website creation. I have done my best to make it completely compatible with large monitors, mobile phones, as well at tablets. If you see any display errors please let me know so I can fix them! Written in HTML with CSS using Adobe Dreamweaver.  </p>
         <a href="https://github.com/adhe223/Website"><img src="http://i.imgur.com/XzyLX1N.jpg" /></a>
     </div>
 </div>
